# dbrownell_ParserLib

./: .copier-answers.yml  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  minisign_key.pub  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CICD.yml  CICD_impl.yml
src/dbrownell_ParserLib/: __init__.py  element.py  errors.py  expression.py  location.py  multiline_strings.py  region.py  terminal_element.py  terminal_expression.py  visitors.py
src/dbrownell_ParserLib/antlr/: __init__.py  antlr_parser.py  antlr_visitor_mixin.py  antlr_visitor_mixins.py
src/dbrownell_ParserLib/antlr/build_antlr_grammar/: __init__.py
src/dbrownell_ParserLib/test_helpers/: test_visitor.py
tests/: UvScaffolding_sample_file_test.py  antlr_parser_UnitTests.py  antlr_visitor_mixin_UnitTests.py  antlr_visitor_mixins_UnitTests.py  build_antlr_grammar_EndToEndTests.py  element_UnitTests.py  errors_UnitTests.py  expression_UnitTests.py  location_UnitTests.py  multiline_strings_UnitTests.py  region_UnitTests.py  terminal_element_UnitTests.py  terminal_expression_UnitTests.py  visitors_UnitTests.py
tests/EndToEndTests/: build_antlr_grammar_EndToEndTests.py  conftest.py  ignore_whitespace.g4  ignore_whitespace_EndToEndTests.py  insignificant_whitespace.g4  insignificant_whitespace.txt  insignificant_whitespace_EndToEndTests.py  significant_whitespace.g4  significant_whitespace.txt  significant_whitespace_EndToEndTests.py  test_helpers.py
tests/test_helpers/: test_visitor_UnitTests.py
