[project]
name = "dbrownell-parserlib"
version = "0.0.0"
#          ^^^^^
# Wheel names will be generated according to this value. Do not manually modify this value; instead
# update it according to committed changes by running this command from the root of the repository:
#
#   uv run python -m AutoGitSemVer.scripts.UpdatePythonVersion ./pyproject.toml ./src

description = "Functionality useful when creating parsers."
readme = "README.md"
authors = [
    { name = "Dave Brownell", email = "github@DavidBrownell.com" }
]
requires-python = ">= 3.14"
dependencies = [
    "antlr-denter>=1.3.1",
    "antlr4-python3-runtime>=4.13.2",
    "dbrownell-common>=0.16.8",
    "plum>=2.9.0",
]
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.14",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/davidbrownell/dbrownell_ParserLib"
Documentation = "https://github.com/davidbrownell/dbrownell_ParserLib"
Repository = "https://github.com/davidbrownell/dbrownell_ParserLib"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "autogitsemver>=0.9.15",
    "pre-commit>=4.6.0",
    "py-minisign>=0.13.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.pytest.ini_options]
addopts = "--verbose -vv --capture=no --cov=dbrownell_ParserLib --cov-report html --cov-report term --cov-report xml:coverage.xml --cov-fail-under=95.0"
python_files = ["tests/*Tests.py"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
exclude = ["tests/**"]

select = ["ALL"]

ignore = [
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "BLE001", # Do not catch blind exception: `Exception`
    "COM812", # Trailing comma missing
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__` method
    "D202", # No blank lines allowed after function docstring
    "D203", # Incorrect blank line before class docstring
    "D213", # Multi line summary second line
    "E501", # Line too long
    "FIX002", # Line contains TODO, consider resolving the issue
    "I001", # Import block is un-sorted or un-formatted
    "N802", # Function name `xxx` should be lowercase
    "N999", # Invalid module name
    "RSE102", # Unnecessary parentheses on raise exception
    "S101", # Use of assert detected
    "TC006", # Add quotes to type expression in `typing.cast()`
    "TD002", # Missing author in TODO
    "TD003", # Missing issue link for this TODO
    "TRY002", # Create your own exception
    "TRY300", # Consider moving this statement to an `else` block
    "UP032", # Use f-string instead of `format` call
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 20
max-returns = 20

[tool.ty.rules]
useless-overload-body = "ignore"  # This rule is not compatible with plum overloads

[tool.uv.build-backend]
module-name = "dbrownell_ParserLib"
